--- a/package.json
+++ b/package.json
@@ -19,9 +19,18 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@angular/fire": "^5.4.2",
+    "@firebase/app": "^0.5.4",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.8.2",
+    "firebase-tools": "^7.13.0",
+    "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
+    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.24",
