--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              // "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.scss"
             ],
             "scripts": [
-              // "node_modules/jquery/dist/jquery.min.js",
-              // "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
