--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@angular/fire": "^5.4.2",
     "@firebase/app": "^0.5.4",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.8.2",
     "firebase-tools": "^7.13.0",
+    "font-awesome": "^4.7.0",
     "g": "^2.0.1",
     "ng2-validation": "^4.2.0",
     "rxjs": "~6.4.0",
