--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@firebase/app": "^0.5.4",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "angular7-data-table": "^1.0.13",
     "bootstrap": "^4.4.1",
     "firebase": "^7.8.2",
     "firebase-tools": "^7.13.0",
