--- a/firebase.json
+++ b/firebase.json
@@ -6,13 +6,11 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [{
-    "source": "/public/**",
-    "destination": "/public.html"
-	  },
-	  {
-	    "source": "**",
-	    "destination": "/index.html"
-	  }]
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
